@@ -24,6 +24,11 @@ Changes in version 0.1.2.9-??? - 2007-??-??
       of 2 as indicating that the server is completely bad; it sometimes
       means that the server is just bad for the request in question. (may fix
       the last of bug 326.)
+    - On mingw, use "%I64u" to printf/scanf 64-bit integers, instead of the
+      usual GCC "%llu".  This prevents a bug when saving 64-bit int
+      configuration values on mingw; the high-order 32 bits would get
+      truncated.  If the value was then reloaded, disaster would
+      occur. (Fixes bug 400 and maybe also bug 397.)
 
 
 Changes in version 0.1.2.8-beta - 2007-02-26
